--- a/calendar/index.html
+++ b/calendar/index.html
@@ -92,23 +92,16 @@
 
     </div>
     <!-- DF CORE LIBS -->
-    <script src="/lib/web-core/js/modernizr.js"></script>
     <script src="/lib/web-core/js/prettify/prettify.js"></script>
-    <script src="/lib/web-core/js/application.js"></script>
     <script src="/lib/web-core/js/jquery.js"></script>
     <script src="/lib/web-core/js/bootstrap.min.js"></script>
-    <script src="/lib/web-core/js/mustache.js"></script>
-    <script src="/lib/web-core/js/templates.js"></script>
     <!-- APP SPECIFIC LIBS -->
     <script src="js/actions.js"></script>
     <script src="js/utils.js"></script>
 
     <script>
 
-        Calendar = new DF.Application({
-            "appName":"Calendar",
-            "version":".0001"
-        });
+        Actions = new actions();
 
     </script>
 <br/>
