--- a/calendar/index.html
+++ b/calendar/index.html
@@ -92,9 +92,9 @@
 
     </div>
     <!-- DF CORE LIBS -->
-    <script src="/lib/web-core/js/prettify/prettify.js"></script>
-    <script src="/lib/web-core/js/jquery.js"></script>
-    <script src="/lib/web-core/js/bootstrap.min.js"></script>
+    <script src="/public/web-core/js/prettify/prettify.js"></script>
+    <script src="/public/web-core/js/jquery.js"></script>
+    <script src="/public/web-core/js/bootstrap.min.js"></script>
     <!-- APP SPECIFIC LIBS -->
     <script src="js/actions.js"></script>
     <script src="js/utils.js"></script>
@@ -109,8 +109,8 @@
 <pre class="prettyprint">
 $.ajax({
             dataType:'json',
-            url:'http://' + location.host + '/rest/db/Events',
-            data:'app_name=Calendar&method=GET',
+            url:location.protocol + '//' + location.host + '/rest/db/Events',
+            data:'app_name=Calendar',
             cache:false,
             success:function (response) {
 
@@ -125,8 +125,8 @@ $.ajax({
 <pre class="prettyprint">
 $.ajax({
             dataType:'json',
-            type: "POST",
-            url:'http://' + location.host + '/rest/db/Events/' + id + '?app_name=Calendar&method=DELETE',
+            type: "DELETE",
+            url:location.protocol + '//' + location.host + '/rest/db/Events/' + id + '?app_name=Calendar',
             cache:false,
             processData: false,
             success:function () {
@@ -142,7 +142,7 @@ var newRec = {"record":[{"title":title,"date":date, "type": type, "desc" : desc}
                 $.ajax({
                 dataType:'json',
                 type : "POST",
-                url:'http://' + location.host + '/rest/db/Events?app_name=calendar&method=POST',
+                url:location.protocol + '//' + location.host + '/rest/db/Events?app_name=calendar',
                 data:JSON.stringify(newRec),
                 cache:false,
                 processData: false,
@@ -160,8 +160,8 @@ var newRec = {"record":[{"title":title,"date":date, "type": type, "desc" : desc}
  var newRec = {"record":[{"id":id,"title":title,"date":date, "type": type, "desc" : desc}]};
                 $.ajax({
                 dataType:'json',
-                type : "POST",
-                url:'http://' + location.host + '/rest/db/Events?app_name=calendar&method=MERGE',
+                type : "MERGE",
+                url:location.protocol + '//' + location.host + '/rest/db/Events?app_name=calendar',
                 data:JSON.stringify(newRec),
                 cache:false,
                 processData: false,
@@ -171,10 +171,6 @@ var newRec = {"record":[{"title":title,"date":date, "type": type, "desc" : desc}
                 error:function (response) {
                     alertErr(response);
                  }
-            });
-</pre>
-</body>
-</html>        }
             });
 </pre>
 </body>
