Bye bye web-core.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,12 +2,8 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Calendar Application : DreamFactory Software</title>
-    <!-- Bootstrap -->
-
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/prettify.css" rel="stylesheet" type="text/css">
-
-
 </head>
 <body>
 <div id="modal" class="modal" style="display:none;">
@@ -89,17 +85,14 @@
 
             </div>
         </div>
-
     </div>
-    <!-- DF CORE LIBS -->
-    <script src="/public/web-core/js/prettify/prettify.js"></script>
-    <script src="/public/web-core/js/jquery.js"></script>
-    <script src="/public/web-core/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <!-- APP SPECIFIC LIBS -->
     <script src="js/actions.js"></script>
     <script src="js/utils.js"></script>
-
-    <script>
+    <script src="js/prettify.js"></script>
+<script>
 
         Actions = new actions();
 
